Added MMC routes Small updates to io module and API spec
