# api/docs-v1/mddf-api-doc.yaml
@@ -15,6 +15,8 @@ servers:
 tags:
   - name: MEC Operations
     description: "Retrieve Media Entertainment Core metadata"
+  - name: MMC Operations
+    description: "Retrieve Media Manifest Core metadata"
   - name: Avails Operations
     description: "Add, remove and retrieve avails information for a given resource"
   - name: Ancillary Operations
@@ -27,7 +29,7 @@ paths:
       description: "Returns an MEC resource to the requester"
       operationId: mecGetResource
       parameters:
-        - $ref: '#/components/parameters/contentId'
+        - $ref: '#/components/parameters/mecContentId'
       responses:
         '200':
           description: "Successful"
@@ -47,7 +49,7 @@ paths:
       description: "Given valid CoreMetadata the resources server will create a new resource associated with this endpoint  "
       operationId: mecPostResource
       parameters:
-        - $ref: "#/components/parameters/contentId"
+        - $ref: "#/components/parameters/mecContentId"
       requestBody:
         description: 'MEC request body'
         required: true
@@ -75,7 +77,7 @@ paths:
       description: "Given valid CoreMetadata the resources server will update a resource associated with this endpoint  "
       operationId: mecPutResource
       parameters:
-        - $ref: "#/components/parameters/contentId"
+        - $ref: "#/components/parameters/mecContentId"
       requestBody:
         description: 'MEC request body'
         required: true
@@ -103,7 +105,7 @@ paths:
       description: "Given valid CoreMetadata the resources server will update a resource associated with this endpoint"
       operationId: mecDeleteResource
       parameters:
-        - $ref: "#/components/parameters/contentId"
+        - $ref: "#/components/parameters/mecContentId"
       responses:
         '200':
           description: "Successful"
@@ -133,6 +135,121 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/resourceCount"
+
+  '/mmc/{contentId}':
+    get:
+      tags:
+        - MMC Operations
+      description: "Returns an Media Manifest for the selected resource to the requester"
+      operationId: mmcGetResource
+      parameters:
+        - $ref: '#/components/parameters/mmcContentId'
+      responses:
+        '200':
+          description: "Successful"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/mmcResource"
+        '404':
+          description: "Failed: Resource not found"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/error"
+    post:
+      tags:
+        - MMC Operations
+      description: "Given a valid Media Manifest the resources server will create a new resource with this contentId"
+      operationId: mmcPostResource
+      parameters:
+        - $ref: "#/components/parameters/mmcContentId"
+      requestBody:
+        description: 'MEC request body'
+        required: true
+        content:
+          application/xml:
+            schema:
+              type: string
+            example: '<?xml version="1.0" encoding="UTF-8"?>'
+      responses:
+        '201':
+          description: "Successful"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/error"
+        '209':
+          description: "Resource already exists"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/error"
+    put:
+      tags:
+        - MMC Operations
+      description: "Given a valid Media Manifest the resources server will update a resource associated with this endpoint  "
+      operationId: mmcPutResource
+      parameters:
+        - $ref: "#/components/parameters/mmcContentId"
+      requestBody:
+        description: 'Media Manifest request body'
+        required: true
+        content:
+          application/xml:
+            schema:
+              type: string
+            example: '<?xml version="1.0" encoding="UTF-8"?>'
+      responses:
+        '200':
+          description: "Successful"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/successResponse"
+        '404':
+          description: "Failed: Resource not found"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/error"
+    delete:
+      tags:
+        - MMC Operations
+      description: "Will permanently delete the Media Manifest with the contentId"
+      operationId: mmcDeleteResource
+      parameters:
+        - $ref: "#/components/parameters/mmcContentId"
+      responses:
+        '200':
+          description: "Successful"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/successResponse"
+        '204':
+          description: "No Content"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/error"
+  '/mmc/getcount':
+    get:
+      tags:
+        - MMC Operations
+      description: "Returns the total number of Media Manifest resources available"
+      operationId: mmcGetCount
+      responses:
+        '200':
+          description: "Total number of MMC resources"
+          content:
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/resourceCount"
+            application/json:
+              schema:
+                $ref: "#/components/schemas/resourceCount"
+
   '/artwork/{resourceId}':
     get:
       tags:
@@ -188,6 +305,7 @@ paths:
             application/xml:
               schema:
                 $ref: "#/components/schemas/error"
+
   '/mecmap/{contentId}':
     get:
       tags:
@@ -195,7 +313,7 @@ paths:
       description: "If the content is not found, will also look for child works of the id"
       operationId: mecMapResource
       parameters:
-        - $ref: '#/components/parameters/contentId'
+        - $ref: '#/components/parameters/mecContentId'
       responses:
         '200':
           description: "Successful"
@@ -241,7 +359,7 @@ paths:
                 $ref: "#/components/schemas/error"
 components:
   parameters:
-    contentId:
+    mecContentId:
       name: "contentId"
       description: "An identifier that uniquely identifies the desired resource"
       example: "md:cid:org:number.hbo.com:787232"
@@ -250,10 +368,19 @@ components:
       schema:
         type: string
 
+    mmcContentId:
+      name: "contentId"
+      description: "An identifier that uniquely identifies the desired resource"
+      example: "md:cid:eidr-s:AD07-310C-C59D-6785-C63A-G"
+      in: path
+      required: true
+      schema:
+        type: string
+
 
   requestBodies:
     mecResource:
-      description: 'MEC request body'
+      description: 'Resource request body'
       required: true
       content:
         application/xml:
@@ -263,6 +390,10 @@ components:
 
   schemas:
     mecResource:
+      type: string
+      example: '<?xml version="1.0" encoding="UTF-8"?>'
+
+    mmcResource:
       type: string
       example: '<?xml version="1.0" encoding="UTF-8"?>'
 
